/*
 * Copyright (C) 2019 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";
option optimize_for = LITE_RUNTIME;

package perfetto.protos;

message HeapProfileCallsiteStats {
  message Frame { optional string name = 1; }

  message Callsite { repeated Frame frame = 1; }

  message CallsiteStats {
    optional Callsite callsite = 1;

    // Count of objects allocated at this callsite
    optional int64 total_count = 2;
    // Count of bytes allocated at this callsite
    optional int64 total_bytes = 3;

    // Count of allocated objects that were not freed
    optional int64 delta_count = 4;
    // Count of allocated bytes that were not freed
    optional int64 delta_bytes = 5;
  }

  // Next id: 4
  message InstanceStats {
    optional uint32 pid = 3;
    optional string process_name = 1;
    repeated CallsiteStats callsite_stats = 2;
  }

  repeated InstanceStats instance_stats = 1;
}
